[85] api for uffizzi project describe
